Mastering, My way from to the Top!